# autoangel

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
examples/cpp/: pck_dump.cpp
examples/lua/: el_diff.lua  farm.lua  icon_gen.lua  loot_simulator.lua  pck_diff.lua
examples/py/: el_diff.py  farm.py  gen_chest_bb_content.py  loot_simulator.py  pck_diff.py
src/bindings/lua/: api.cpp
src/bindings/py/: api.cpp
src/elements/: config.cpp  config.h  data.cpp  data.h
src/pck/: package.cpp  package.h
src/util/: encoding.cpp  encoding.h
